adding enrollment end points