@@ -4,11 +4,15 @@ import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
+import javax.management.relation.RoleNotFoundException;
+
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.autoconfigure.jms.JmsProperties.Listener.Session;
 import org.springframework.stereotype.Service;
 
+import com.global.coursemanagementsystem.entity.Trainer;
 import com.global.coursemanagementsystem.entity.TrainingSession;
+import com.global.coursemanagementsystem.error.ResourceFoundException;
 import com.global.coursemanagementsystem.error.ResourceNotFoundException;
 import com.global.coursemanagementsystem.mapstruct.dto.CourseSessionDTO;
 import com.global.coursemanagementsystem.mapstruct.dto.TrainingSessionDTO;
@@ -24,18 +28,16 @@ public class SessionService {
 
     private final TrainingSessionRepository trainingSessionRepository;
     private final CourseService courseService;
-
-    private TrainingSessionMapper trainingSessionMapper;
+    private final TrainingSessionMapper trainingSessionMapper;
 
     public CourseSessionDTO getSessionByCourseId(int id) {
         List<Optional<TrainingSession>> sessions = trainingSessionRepository.findSessionsById(id);
         List<TrainingSessionDTO> sessionsDTO;
         if (!sessions.isEmpty()) {
-
             sessionsDTO = sessions.stream().map(session -> {
                 TrainingSessionDTO sessionDTO = trainingSessionMapper.toDTO(session.get());
                 return sessionDTO;
-            }).collect(Collectors.toList());
+            }).toList();
         } else {
             throw new ResourceNotFoundException("there is no sessions for this course");
         }
@@ -47,19 +49,34 @@ public class SessionService {
     }
 
     public TrainingSessionDTO addSession(AddTrainingSessionRequest sessionRequest) {
-      Optional<TrainingSession> trainingSession =trainingSessionRepository.findById(sessionRequest.getSessionId());
-       
-      return null;
+         TrainingSession currentTrainingSession = trainingSessionMapper.toEntity(sessionRequest);
+         currentTrainingSession = trainingSessionRepository.save(currentTrainingSession);
+        return trainingSessionMapper.toDTO(currentTrainingSession);
+
     }
 
     public TrainingSessionDTO updateSession(TrainingSessionDTO sessionDTO) {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'updateSession'");
+        TrainingSession currentTrainingSession = trainingSessionMapper.toEntity(sessionDTO);
+        TrainingSession sessionHavingSameId =trainingSessionRepository.findById(currentTrainingSession.getSessionId()).orElse(null);
+    
+        if(sessionHavingSameId!=null) {
+            throw new ResourceNotFoundException("There is no session with the same id");
+        }
+        currentTrainingSession = trainingSessionRepository.save(currentTrainingSession);
+        return trainingSessionMapper.toDTO(currentTrainingSession);
     }
 
     public List<TrainingSessionDTO> getAllSessions() {
-        // TODO Auto-generated method stub
-        throw new UnsupportedOperationException("Unimplemented method 'getAllSessions'");
+            return trainingSessionRepository.findAll().stream().map(trainingSessionMapper::toDTO).toList();
+       
     }
+
+    public TrainingSessionDTO findById(Long id) {
+        TrainingSession trainingSession = trainingSessionRepository.findById(id)
+           .orElseThrow(()-> new ResourceNotFoundException("there is no session with the id "+id));
+        return trainingSessionMapper.toDTO(trainingSession);
+ 
+        }
+
 
 }
